--- a/views/index.pug
+++ b/views/index.pug
@@ -13,3 +13,4 @@ block content
       change = change-1;
       document.getElementById("reduce").innerHTML= `Count ${count} with change ${change}`
     }
+  a(href="/Account") Account Page 
