--- a/views/selector.pug
+++ b/views/selector.pug
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  
+  - var images = ["account1.png","account2.jpg","account3.jpg","account4.png","account5.jpg"]
+  - for(let i=0; i<3;i++){
+    -var num = images[Math.floor(Math.random() * 5)]
+    img(src= "/images/"+num, alt= num, style={width: "300px",height: "300px"})
+  -}
